# pallavi

./: README.md
scripts/: generate_lm.sh
tools/: Makefile.am  Makefile.in  README  bootstrap  configure  configure.ac
tools/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
tools/src/: ml_dictionarygen.c  ml_phonetable.c  ml_texttowordfreq.c  ml_texttowordlist.c  ml_transliterate.c  ml_transliterate.h
