AC_INIT([pallavi_ml2p],[0.1],[pallavi.malayalam@gmail.com],[pallavi_ml2p])
AM_INIT_AUTOMAKE
AC_PROG_CC
AC_LANG(C++)
AM_PROG_CC_C_O

# Checks for programs.
AC_PROG_CXX
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_LIBTOOL

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_SYS_LARGEFILE

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

# Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MALLOC
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME

AC_CONFIG_FILES(Makefile)
AC_PROG_INSTALL
AC_OUTPUT
